--- a/User/src/main/resources/application.properties
+++ b/User/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/User
 spring.datasource.username= root
 spring.datasource.password= Ali_vlizadeh@25975800
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
