User Service Upgraded.

--- a/User/src/main/resources/application.yml
+++ b/User/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/User
     username: root
-    password: Ali_vlizadeh@25975800
+    password: password
   jpa:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
