Chat Service and microservice Upgraded.

--- a/Chat-service/src/main/resources/application.properties
+++ b/Chat-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.password=guest
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
+spring.application.name=CHAT_SERVICE
