--- a/Gateway-service/src/main/resources/application.yml
+++ b/Gateway-service/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 8080
-
 spring:
   cloud:
     gateway:
@@ -12,8 +11,12 @@ spring:
         - id: UserModule
           uri: http://localhost:8082/
           predicates:
-            - Path=/**
+            - Path=/users/**
         - id: ChatModule
           uri: http://localhost:8083/
           predicates:
-            - Path=/**
+            - Path=/chats/**
+  main:
+    web-application-type: reactive
+  application:
+    name: GATEWAY_SERVICE
